; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_lib.c_bcheck2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_lib.c_bcheck2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"\09missing %c\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"\09%d missing %c's\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"\09extra %c\0A\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"\09%d extra %c's\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bcheck2(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load i32, i32* @stderr, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 (i32, i8*, i32, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %40

13:                                               ; preds = %3
  %14 = load i32, i32* %4, align 4
  %15 = icmp sgt i32 %14, 1
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load i32, i32* @stderr, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 (i32, i8*, i32, ...) @fprintf(i32 %17, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %18, i32 %19)
  br label %39

21:                                               ; preds = %13
  %22 = load i32, i32* %4, align 4
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load i32, i32* @stderr, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 (i32, i8*, i32, ...) @fprintf(i32 %25, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 %26)
  br label %38

28:                                               ; preds = %21
  %29 = load i32, i32* %4, align 4
  %30 = icmp slt i32 %29, -1
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load i32, i32* @stderr, align 4
  %33 = load i32, i32* %4, align 4
  %34 = sub nsw i32 0, %33
  %35 = load i32, i32* %6, align 4
  %36 = call i32 (i32, i8*, i32, ...) @fprintf(i32 %32, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i32 %34, i32 %35)
  br label %37

37:                                               ; preds = %31, %28
  br label %38

38:                                               ; preds = %37, %24
  br label %39

39:                                               ; preds = %38, %16
  br label %40

40:                                               ; preds = %39, %9
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
